# vertigo

./: .dockerignore  .gitignore  .travis.yml  CHANGES.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  Taskfile.yaml  build.sh  build_dev.sh  build_prod.sh  dev_notes.md  package-lock.json  package.json  rollup.config.mjs  rollup.test.config.mjs  serve_static_build.sh  start.sh  start_dev.sh  test.sh  tsconfig.json  tutorial.md  upgrade_tool.sh
app/: Cargo.toml  doc  index.html  package.json  rollup.config.js  start.sh
app/app_rust/: Cargo.toml
app/app_rust/src/: app_state.rs  application.rs  lib.rs
app/app_rust/src/view/: main_render.rs
app/app_www/: index.js  package-lock.json  package.json  webpack.config.js
app/src/: app_state.rs  application.rs  event.rs  fetch.rs  index.html  lib.rs  main.rs
app/src/app/: app_render.rs  app_state.rs  mod.rs  render.rs  route.rs  spinner.rs  state.rs
app/src/app/counters/: mod.rs
app/src/app/game_of_life/: mod.rs  next_generation.rs
app/src/app/github_explorer/: render.rs  state.rs
app/src/app/input/: mod.rs
app/src/app/main/: mod.rs  spinner.rs
app/src/app_state/: app_state.rs  app_state_render.rs  mod.rs
app/src/game_of_life/: mod.rs
app/src/github_explorer/: mod.rs  render.rs  state.rs
app/src/input/: mod.rs
app/src/mock/: event_642157.json  event_649751.json  event_659008.json  list.json
app/src/my_app/: app_state.rs  app_state_render.rs
app/src/simple_counter/: mod.rs  render.rs  simple_counter.rs  simple_counter_render.rs  simple_counter_state.rs  state.rs
app/src/sudoku/: mod.rs
app/src/sudoku/render/: config.rs  mod.rs  render_cell_possible.rs  render_cell_value.rs
app/src/sudoku/state/: mod.rs  number_item.rs  possible_values.rs  possible_values_last.rs  sudoku_square.rs  tree_box.rs
app/src/view/: mod.rs
crates/browserdriver/: Cargo.toml
crates/browserdriver/src/: dom_event.rs  driver.js  event.rs  fetch.rs  lib.rs  set_interval.rs
crates/vertigo/: Cargo.toml  build.rs
crates/vertigo-browserdriver/: Cargo.toml  build.rs  build_js.sh
crates/vertigo-browserdriver/jsdriver/: build.sh  package.json  rollup.config.ts  tsconfig.json
crates/vertigo-browserdriver/jsdriver/src/: DriverBrowserDomJs.ts  DriverBrowserFetchJs.ts  DriverBrowserIntervalJs.ts  driver.ts
crates/vertigo-browserdriver/src/: api.rs  browser_app.rs  dom_driver_browser.rs  dom_event.rs  dom_utils.rs  driver_browser.rs  driver_browser_fetch.rs  driver_browser_hashrouter.rs  driver_browser_interval.rs  element_wrapper.rs  fetch.rs  init_env.rs  lib.rs  stack.rs  transaction.rs  wasm_run.js
crates/vertigo-browserdriver/src/driver_browser_dom/: driver_browser_dom_js.js  driver_browser_dom_js.rs  driver_browser_dom_js.ts  driver_data.rs  element_wrapper.rs  mod.rs  visited_node_manager.rs
crates/vertigo-browserdriver/src/driver_browser_fetch/: driver_browser_fetch.rs  driver_browser_fetch_js.rs  mod.rs
crates/vertigo-browserdriver/src/driver_browser_hashrouter/: driver_browser_hashrouter.rs  driver_browser_hashrouter_js.js  driver_browser_hashrouter_js.rs  driver_browser_hashrouter_js.ts  mod.rs
crates/vertigo-browserdriver/src/driver_browser_interval/: driver_browser_interval.rs  driver_browser_interval_js.rs  driver_browser_interval_js.ts  mod.rs
crates/vertigo-browserdriver/src/events/: input.rs  keydown.rs  mod.rs  mousedown.rs  mouseenter.rs
crates/vertigo-browserdriver/src/modules/: mod.rs
crates/vertigo-browserdriver/src/utils/: callback_manager.rs  counter_rc.rs  future.rs  futures_spawn.rs  hash_map_rc.rs  json.rs  mod.rs
crates/vertigo-browserdriver/src_js/: wasm_init.ts  wasm_module.ts
crates/vertigo-browserdriver/src_js/module/: cookies.ts  fetch.ts  hashrouter.ts  instant.ts
crates/vertigo-cli/: Cargo.toml  README.md
crates/vertigo-cli/src/: check_env.rs  command.rs  lib.rs  logs.rs  main.rs  models.rs  utils.rs
crates/vertigo-cli/src/command/: builder.rs  mod.rs  process_result.rs  task.rs
crates/vertigo-cli/src/commons/: command.rs  error_codes.rs  logging.rs  mod.rs  models.rs  parse_key_val.rs  spawn.rs
crates/vertigo-cli/src/new/: mod.rs
crates/vertigo-cli/src/run_parallel/: mod.rs
crates/vertigo-cli/src/serve/: mod.rs  mount_path.rs  request_state.rs  response_state.rs  serve_command.rs  serve_opts.rs  serve_run.rs  server_state.rs  spawn.rs  vertigo_handler.rs  vertigo_install.rs  (+1 more)
crates/vertigo-html/: Cargo.toml
crates/vertigo-html-macro/: Cargo.toml
crates/vertigo-html-macro/src/: css.pest  css_parser.rs  grammar.pest  html.pest  html_parser.rs  lib.rs  parser.rs
crates/vertigo-html/src/: embed.rs  grammar.pest  inline.rs  lib.rs  parser.rs
crates/vertigo-macro/: Cargo.toml  README.md  build.rs
crates/vertigo-macro/src/: api_access.rs  api_access_old.rs  bind.rs  component.rs  css.pest  css_parser.rs  get_target_dir.rs  html.pest  html_parser.rs  html_parser2.rs  include_static.rs  js_expression.rs  js_json_derive.rs  lib.rs  logs.rs  main_wrap.rs  serde_request.rs  store.rs  trace_tailwind.rs  utils.rs  wasm_path.rs
crates/vertigo-testing/: Cargo.toml
crates/vertigo-testing/src/: lib.rs  tests.rs
crates/vertigo/docs/: websocket-collection.md
crates/vertigo/experiments/: test.html
crates/vertigo/src/: app.rs  bind.rs  callback.rs  context.rs  dom_list.rs  dom_value.rs  driver.rs  driver_refs.rs  exports.rs  external_api.rs  fetch_builder.rs  future_box.rs  html_entities.rs  inspect.rs  instant.rs  lib.rs  long_ptr.rs  request_builder.rs  router.rs  websocket.rs
demo/: Cargo.toml  index.html
demo-server/: Cargo.toml
demo-server/src/: app_state.rs  connection.rs  main.rs
demo/app/: Cargo.toml  index.html
demo/app/src/: lib.rs  szkic.rs  tailwind.css
demo/server/: Cargo.toml
demo/server/src/: app_state.rs  client_message.rs  connection.rs  items.rs  main.rs  ws_collection.rs
demo/src/: lib.rs
demo/src/app/: chat.rs  mod.rs  render.rs  route.rs  state.rs
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs
examples/router/: Cargo.toml  index.html
examples/router/src/: app.rs  lib.rs
(+774 files in other folders)
