[workspace]
members = [
    "crates/vertigo",
    "crates/vertigo-cli",
    "crates/vertigo-macro",

    "demo/app",
    "demo/server",

    "examples/counter",
    "examples/router",
    "examples/trafficlights",

    "tests",
    "tests/basic",

    "lint-project"
]
exclude = [
    "build/vertigo-clit-test/some_app"
]
resolver = "2"

[profile.release]
lto = true

#for speed
opt-level = 's'

#for size
#opt-level = 'z'
