[workspace]
members = [
    "crates/vertigo",
    "crates/vertigo-cli",
    "crates/vertigo-macro",

    "demo/app",
    "demo/server",

    "examples/counter",
    "examples/router",
    "examples/trafficlights",

    "tests",
    "tests/basic",

    "lint-project",
]
exclude = ["build/vertigo-cli-test/some_app"]
resolver = "2"

[profile.release]
lto = "thin"
opt-level = 'z'
incremental = true

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
