[workspace]
members = [
    "crates/vertigo",
    "crates/vertigo-cli",
    "crates/vertigo-macro",

    "demo/app",
    "demo/server",

    "examples/counter",
    "examples/router",
    "examples/trafficlights",

    "tests",
    "tests/basic",

    "lint-project",
]
exclude = ["build/vertigo-cli-test/some_app"]
resolver = "2"

[workspace.package]
version = "0.11.1"
edition = "2024"
repository = "https://github.com/vertigo-web/vertigo"
authors = [
    "Grzegorz Szeliga <szeligagrzegorz@gmail.com>",
    "Michał Pokrywka <wolfmoon@o2.pl>",
]
license = "MIT OR Apache-2.0"
keywords = ["wasm", "web", "isomorphic", "reactive", "javascript"]
readme = "README.md"
homepage = "https://vertigo.znoj.pl"

[workspace.dependencies]
vertigo = { path = "./crates/vertigo", version = "0.11.1" }
vertigo-macro = { path = "./crates/vertigo-macro", version = "0.11.1" }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = "thin"
opt-level = 'z'
incremental = true
