[package]
name = "app_rust"
version = "0.1.0"
authors = ["Grzegorz Szeliga <grzegorz.szeliga@twoupdigital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
log = "0.4.11"
wasm-logger = "0.2.0"
virtualdom = { path = "../../crates/virtualdom" }
browserdriver = { path = "../../crates/browserdriver" }
wasm-bindgen = {version = "0.2.63", features = ["nightly"]}
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"