[package]
name = "app_rust"
version = "0.1.0"
authors = ["Grzegorz Szeliga <grzegorz.szeliga@twoupdigital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
log = "0.4.11"
wasm-bindgen = {version = "0.2.69", features = ["nightly"]}
wasm-bindgen-futures = "0.4.19"
wasm-logger = "0.2.0"
wee_alloc = { version = "0.4.5", optional = true }

vertigo = { path = "../crates/vertigo" }
browserdriver = { path = "../crates/browserdriver" }
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1.0.60"


#for run
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
structopt = "0.3"
wasm-run = "0.7.0"
