[package]
name = "vertigo-demo-server"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
axum = { version = "0.3", features = ["ws"] }
tokio = { version = "1.13.0", features = ["full"] }
tower-http = { version = "0.1.1", features = ["fs", "trace"] }
#anyhow = "1.0.45"
