[package]
name = "vertigo-demo"
version = "0.1.0"
authors = ["Grzegorz Szeliga <grzegorz.szeliga@twoupdigital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
log = "0.4.14"
wasm-bindgen = {version = "0.2.74", features = ["nightly"]}
wasm-bindgen-futures = "0.4.24"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

vertigo = { path = "../crates/vertigo", version = "0.1.0-alpha.3" }
vertigo-html = { path = "../crates/vertigo-html", version = "0.1.0-alpha.3" }
vertigo-browserdriver = { path = "../crates/vertigo-browserdriver", version = "0.1.0-alpha.3" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
