[package]
name = "browserdriver"
version = "0.1.0"
authors = ["Grzegorz Szeliga <grzegorz.szeliga@twoupdigital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virtualdom = { path = "../../crates/virtualdom" }
wasm-bindgen = {version = "0.2.63", features = ["nightly", "serde-serialize"]}
log = "0.4.11"
serde = { version = "1.0.114", features = ["derive", "rc"] }
serde_json = "1.0.55"
web-sys = { version="0.3.46", features=[
    "Document",
    "HtmlElement",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "MouseEvent",
    "KeyboardEvent",
    "Text",
    "HtmlHeadElement",
]}