[package]
name = "browserdriver"
version = "0.1.0"
authors = ["Grzegorz Szeliga <grzegorz.szeliga@twoupdigital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vertigo = { path = "../../crates/vertigo" }
wasm-bindgen = {version = "0.2.70", features = ["nightly", "serde-serialize"]}
wasm-bindgen-futures = "0.4.20"
log = "0.4.14"
web-sys = { version="0.3.47", features=[
    "Document",
    "Headers",
    "History",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "Location",
    "MouseEvent",
    "Request",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Text",
    "Window",
]}
