[package]
name = "vertigo-browserdriver"
version = "0.1.0-beta.2"
authors = ["Grzegorz Szeliga <szeligagrzegorz@gmail.com>", "Michał Pokrywka <wolfmoon@o2.pl>"]
description = "Virtual DOM library for Rust - web-browser rendering driver"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
vertigo = { path = "../../crates/vertigo", version="0.1.0-beta.2" }
wasm-bindgen = {version = "0.2.78", features = ["nightly"]}
wasm-bindgen-futures = "0.4.28"
log = "0.4.14"
