[package]
name = "vertigo-cli"
version = "0.5.0"
authors = ["Grzegorz Szeliga <szeligagrzegorz@gmail.com>", "Michał Pokrywka <wolfmoon@o2.pl>"]
description = "Reactive Real-DOM library with SSR for Rust - packaging/serving tool"
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[[bin]]
name = "vertigo"
path = "src/main.rs"
doc = false

[lib]
name = "vertigo_cli"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
axum-extra = "0.8.0"
base64 = "0.21"
clap = { version = "4.0", features = ["derive"] }
crc = "3.0"
env_logger = "0.11"
futures = "0.3.26"
html-escape = "0.2"
include_dir = "0.7"
log = "0.4"
notify = "6.1.1"
pkg-version = "1"
poem = { version = "1.3.59", features = ["sse"] }
reqwest = "0.11.14"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.25", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.4", features = ["fs"] }
tokio-retry = "0.3"
wasmtime = "14.0"
vertigo = { path = "../vertigo" }
