[package]
name = "vertigo-cli"
version = "0.9.1"
authors = [
    "Grzegorz Szeliga <szeligagrzegorz@gmail.com>",
    "Michał Pokrywka <wolfmoon@o2.pl>",
]
description = "Reactive Real-DOM library with SSR for Rust - packaging/serving tool"
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
    "wasm",
    "web-programming",
]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/vertigo-web/vertigo/"

[[bin]]
name = "vertigo"
path = "src/main.rs"
doc = false

[lib]
name = "vertigo_cli"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7"
actix-files = "0.6.9"
actix-proxy = "0.2"
actix-web = "4.12.1"
awc = { version = "3.8.1", features = ["rustls"] }
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
crc = "3.0"
derive_more = "2.1"
env_logger = "0.11"
futures = "0.3.26"
html-escape = "0.2"
ignore = "0.4"
include_dir = "0.7"
log = "0.4"
notify = "8.2.0"
parking_lot = "0.12.5"
pkg-version = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.25", features = ["full"] }
tokio-retry = "0.3"
walkdir ="2.5"
wasmtime = "40.0"
vertigo = { path = "../vertigo", version = "0.9.1" }

[lints]
workspace = true
