[package]
name = "vertigo-cli"
description = "Reactive Real-DOM library with SSR for Rust - packaging/serving tool"
documentation = "https://docs.rs/vertigo-cli/"
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
    "wasm",
    "web-programming",
]
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "vertigo"
path = "src/main.rs"
doc = false

[lib]
name = "vertigo_cli"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7"
actix-files = "0.6"
actix-proxy = "0.2"
actix-web = "4.13"
awc = { version = "3.8", features = ["rustls"] }
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crc = "3.4"
derive_more = "2.1"
env_logger = "0.11"
futures = "0.3"
html-escape = "0.2"
ignore = "0.4"
include_dir = "0.7"
log = "0.4"
notify = "8.2"
parking_lot = "0.12"
pkg-version = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tokio-retry = "0.3"
walkdir = "2.5"
wasmtime = "43.0"
vertigo = { workspace = true }

[lints]
workspace = true
