[package]
name = "vertigo-html-macro"
version = "0.1.0-alpha.0"
authors = ["Michał Pokrywka <wolfmoon@o2.pl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Html2Vertigo conversion macro"

[lib]
name = "vertigo_html_macro"
proc-macro = true

[dependencies]
log = "0.4.14"
pest = "2.1.3"
pest_derive = "2.1.0"
proc-macro2 = "1.0.24"
proc-macro-error = "1.0.4"
syn = { version = "1.0.60", features = [ "full" ] }
vertigo = { path = "../vertigo" }
