[package]
name = "vertigo-html"
version = "0.1.0-alpha.2"
authors = ["Michał Pokrywka <wolfmoon@o2.pl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Html2Vertigo conversion macro usable re-exports"

[lib]
name = "vertigo_html"

[dependencies]
vertigo = { path = "../vertigo", version = "0.1.0-alpha.2" }
vertigo-html-macro = { path = "../vertigo-html-macro", version = "0.1.0-alpha.2" }
