[package]
name = "vertigo-macro"
version = "0.8.3"
authors = ["Grzegorz Szeliga <szeligagrzegorz@gmail.com>", "Michał Pokrywka <wolfmoon@o2.pl>"]
description = "Reactive Real-DOM library with SSR for Rust - macros"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "vertigo_macro"
proc-macro = true

[dependencies]
darling = "0.21"
base64 = "0.22"
crc = "3.0"
itertools = "0.14"
pest = "2.5"
pest_derive = "2.1"
pkg-version = "1"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
rstml = "0.12"
syn = { version = "2.0", features=["full"] }
tailwind-css = "0.13"

[dev-dependencies]
prettyplease = "0.2.37"
pretty_assertions = "1.4.1"
