[package]
name = "vertigo-macro"
version = "0.11.0"
authors = [
    "Grzegorz Szeliga <szeligagrzegorz@gmail.com>",
    "Michał Pokrywka <wolfmoon@o2.pl>",
]
description = "Reactive Real-DOM library with SSR for Rust - macros"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "vertigo_macro"
proc-macro = true

[dependencies]
base64 = "0.22"
crc = "3.0"
darling = "0.23"
heck = "0.5"
itertools = "0.14"
minreq = { version = "2.14", features = ["https-rustls"] }
pest = "2.5"
pest_derive = "2.1"
pkg-version = "1"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
rstml = "0.12"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
prettyplease = "0.2.37"
pretty_assertions = "1.4.1"

[lints]
workspace = true
