[package]
name = "vertigo-macro"
description = "Reactive Real-DOM library with SSR for Rust - macros"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme = "README.md"

[lib]
name = "vertigo_macro"
proc-macro = true

[dependencies]
base64 = "0.22"
crc = "3.4"
darling = "0.23"
heck = "0.5"
itertools = "0.14"
minreq = { version = "2.14", features = ["https-rustls"] }
pest = "2.8"
pest_derive = "2.8"
pkg-version = "1"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
rstml = "0.12"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
prettyplease = "0.2"
pretty_assertions = "1.4"

[lints]
workspace = true
