[package]
name = "vertigo-testing"
version = "0.1.0-alpha.3"
authors = ["Michał Pokrywka <wolfmoon@o2.pl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Virtual DOM library for Rust - testing facilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vertigo = { path = "../vertigo", version="0.1.0-alpha.3" }
