[package]
name = "vertigo"
version = "0.11.0"
authors = [
    "Grzegorz Szeliga <szeligagrzegorz@gmail.com>",
    "Michał Pokrywka <wolfmoon@o2.pl>",
]
description = "Reactive Real-DOM library with SSR for Rust"
readme = "README.md"
keywords = ["wasm", "web", "isomorphic", "reactive", "javascript"]
homepage = "https://github.com/vertigo-web/"
repository = "https://github.com/vertigo-web/vertigo"
documentation = "https://docs.rs/vertigo/"
categories = ["asynchronous", "gui", "wasm", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
log = { version = "0.4", features = ["std"] }
vertigo-macro = { path = "../../crates/vertigo-macro", version = "0.11.0" }

[dependencies.chrono]
version = ">=0.4.20"
default-features = false
features = ["std"]
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
