[package]
name = "vertigo"
description = "Reactive Real-DOM library with SSR for Rust"
documentation = "https://docs.rs/vertigo/"
categories = ["asynchronous", "gui", "wasm", "web-programming"]
repository.workspace = true
version.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
log = { version = "0.4", features = ["std"] }
vertigo-macro = { workspace = true }

[dependencies.chrono]
version = ">=0.4.20"
default-features = false
features = ["std"]
optional = true

[dependencies.rust_decimal]
version = "1"
default-features = false
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
