[package]
name = "vertigo-demo"
version = "0.1.1"
authors = ["Grzegorz Szeliga <szeligagrzegorz@gmail.com>", "Michał Pokrywka <wolfmoon@o2.pl>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.14"
vertigo = { path = "../../crates/vertigo", version = "0.1", features = [ "serde_request" ] }
serde = { version = "1.0.126", features = ["derive"] }
