[package]
name = "vertigo-demo"
version = "0.9.1"
authors = [
    "Grzegorz Szeliga <szeligagrzegorz@gmail.com>",
    "Michał Pokrywka <wolfmoon@o2.pl>",
]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
vertigo = { path = "../../crates/vertigo", version = "0.9.1" }
