[package]
name = "vertigo-demo-server"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4"
actix-ws = "0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"

[dev-dependencies]
awc = "3.8"
