[package]
name = "vertigo-example-counter"
version = "0.1.0"
authors = ["Grzegorz Szeliga <szeligagrzegorz@gmail.com>", "Michał Pokrywka <wolfmoon@o2.pl>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
vertigo = { path = "../../crates/vertigo", version = "0.1.0-beta.2" }
vertigo-browserdriver = { path = "../../crates/vertigo-browserdriver", version = "0.1.0-beta.2" }
