[package]
name = "vertigo-example-router"
version = "0.6.2"
authors = ["Grzegorz Szeliga <szeligagrzegorz@gmail.com>", "Michał Pokrywka <wolfmoon@o2.pl>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.14"
vertigo = { path = "../../crates/vertigo", version = "0.6.2" }
