[package]
name = "vertigo-example-router"
version = "0.10.1"
authors = [
    "Grzegorz Szeliga <szeligagrzegorz@gmail.com>",
    "Michał Pokrywka <wolfmoon@o2.pl>",
]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vertigo = { path = "../../crates/vertigo", version = "0.10.1" }
